# JeopardyBot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  prod.docker-compose.yml  pyproject.toml  requirements.txt  template.env
.github/workflows/: deploy.yml  main.yaml
app/: app.py
app/admin/: Dockerfile  accessor.py  main.py  mixins.py  models.py  routes.py  schemes.py  utils.py  views.py
app/app/: app.py
app/bot/: accessor.py  manager.py  models.py  schemas.py  utils.py  views.py
app/core/: accessor.py  accessor_base.py  config.py  manager.py  session.py  store.py
app/core/database/: database.py  mixins.py  sqlalchemy_base.py
app/core/database/migrations/: env.py
app/core/database/migrations/versions/: 2025_04_14_1524-32d5607c5cc0_.py  2025_04_18_1107-9b0891d63f2a_.py  2025_04_22_2053-ea84e7a02b20_.py  2025_04_23_1609-17651c57241b_.py  2025_04_23_2211-a0f9c95c9a02_.py
app/fixtures/: data.json  fixtures.py
app/poller/: Dockerfile  poller.py
app/sender/: Dockerfile  sender.py
app/users/: models.py
