[project]
name = "JeopardyBot"
version = "0.0.1"
description = "Телеграмм бот игра `Своя игра` — итоговый проект для курса KTS"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "aiohttp==3.11.16",
    "aiohttp_apispec==3.0.0b2",
    "aiohttp_cors==0.8.1",
    "aiohttp_session==2.12.1",
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "cryptography==44.0.1",
    "greenlet==3.1.1",
    "pydantic==2.11.3",
    "pydantic_settings==2.8.1",
    "PyYAML==6.0.2",
    "SQLAlchemy==2.0.40",
    "aiosignal==1.3.2",
    "apispec==6.8.1",
    "attrs==25.3.0",
    "cffi==1.17.1",
    "frozenlist==1.5.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "multidict==6.4.3",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "typing_extensions==4.13.2",
    "webargs==8.6.0",
    "yarl==1.19.0",
    "aio-pika==9.5.5",
    "aiofiles>=24.1.0",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==0.26.0",
    "pre-commit==4.2.0",
    "ruff==0.11.5"
]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
preview = true
extend-select = [
    "ASYNC",    # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "A001",     # https://docs.astral.sh/ruff/rules/builtin-variable-shadowing
    "B",        # https://docs.astral.sh/ruff/rules/builtin-argument-shadowing
    "C4",       # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C901",     # https://docs.astral.sh/ruff/rules/complex-structure
    "COM818",   # https://docs.astral.sh/ruff/rules/trailing-comma-on-bare-tuple
    "COM819",   # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma
    "D",        # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "E",        # https://docs.astral.sh/ruff/rules/#error-e
    "FLY",      # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FBT003",   # https://docs.astral.sh/ruff/rules/boolean-positional-value-in-call
    "G",        # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I",        # https://docs.astral.sh/ruff/rules/#isort-i
    "INP",      # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "ISC003",   # https://docs.astral.sh/ruff/rules/explicit-string-concatenation
    "LOG",      # https://docs.astral.sh/ruff/rules/#flynt-fly
    "N",        # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PGH",      # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",      # (https://docs.astral.sh/ruff/rules/#flake8-pie-pie)
    "PYI",      # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "PL",       # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PT",       # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PERF",     # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PLR",      # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "RET",      # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",      # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF",      # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "SIM",      # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "T20",      # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "ASYNC1",   # Было заменено на новый
    "TRY300",   # https://docs.astral.sh/ruff/rules/try-consider-else
    "TRY203",   # Было заменено на новый
    "TRY401",   # https://docs.astral.sh/ruff/rules/verbose-log-message
    "UP",       # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "YTT",      # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]

# По мере "бесячих" ошибок буду дополнять, а так, всё строго
extend-ignore = [
    "D1",
    "CPY001",
    "SIM117",
    "SIM114",
    # По рекомендации https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F403", "PLC0415"]
"routes.py" = ["PLC0415"]
"urls.py" = ["PLC0415"]
"store.py" = ["PLC0415"]
"tests/*.py" = ["SIM300", "F403", "F405", "INP001"]
"*/versions/*.py" = ["D415", "INP001"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false


[tool.mypy]
strict = true  # Ещё строже!
python_version = "3.12"
plugins = ['pydantic.mypy']
